# eigendecomposer

./: .gitignore  README.md  eigencalculations.py  eigendecomposer.py  pyproject.toml  requirements.txt  setup.py
eigendecomposer/: __init__.py  main.py
eigendecomposer/core/: decomposer.py  eigencalculations.py  eigendecomposer.py  math_utils.py  matrix_utils.py  plot_utils.py
