[tool.poetry]
name = "eigendecomposer"
version = "1.1.0a1"
description = "A Python app for eigendecomposition and visualization"
authors = ["elahpeca <acephaleee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9" 
numpy = "^1.24.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
PyGObject = "^3.42.0"

[tool.poetry.scripts]
eigendecomposer = "eigendecomposer.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
